--- a/_posts/2017-03-25-struts2学习笔记04-ognl-值栈.md
+++ b/_posts/2017-03-25-struts2学习笔记04-ognl-值栈.md
@@ -20,7 +20,7 @@ categories: [java]
 
     支持对象方法的调用,格式objName.f()
 
-    支持静态方法和值的访问，格式@[类全名(包括包路径)]@[方法名|值名]，例如：@java.lang.String@format('foo %s','bar')。
+    支持静态方法和值的访问，格式`@[类全名(包括包路径)]@[方法名|值名]`，例如：`@java.lang.String@format('foo %s','bar')`
 
     支持赋值操作和表达式串联
 
