修改文章资源文件

--- a/_posts/2017-03-22-修改主题的留言模块为畅言.md
+++ b/_posts/2017-03-22-修改主题的留言模块为畅言.md
@@ -6,7 +6,7 @@ categories: [jekyll]
 
 一个不好的消息....
 
-![p1](20170322-01.jpg)
+![p1](01.jpg)
 
 由于多说即将停止服务，暂时将留言模块换成畅言
 
@@ -54,7 +54,7 @@ window.document.write('<script id="changyan_mobile_js" charset="utf-8" type="tex
 
 ## 完美显示
 
-![p2](20170322-02.jpg)
+![p2](02.jpg)
 
 ## 使用体验
 
