--- a/_posts/2017-03-25-struts2学习笔记04-ognl-值栈.md
+++ b/_posts/2017-03-25-struts2学习笔记04-ognl-值栈.md
@@ -82,11 +82,11 @@ struts2 里面提供本身一种存储机制，类似于域对象
 
 从图中可以看出在action中没有做任何操作时，栈顶元素是action的引用
 
-![p1](20170325-01.jpg)
+![p1](01.jpg)
 
 值栈最重要的分为两部分
 
-![p2](20170325-02.jpg)
+![p2](02.jpg)
 
 1. 第一部分root，结构是list集合，一般都是操作root里面的数据
 
@@ -96,7 +96,7 @@ struts2 里面提供本身一种存储机制，类似于域对象
 
     `class OgnlContext extends Object implements Map`
 
-    ![p3](20170325-03.jpg)
+    ![p3](03.jpg)
 
 ## 向值栈存放数据
 
