--- a/_posts/2017-04-19-nginx配置ssl-重新编译.md
+++ b/_posts/2017-04-19-nginx配置ssl-重新编译.md
@@ -112,6 +112,6 @@ nginx: [emerg] the "ssl" parameter requires ngx_http_ssl_module in /usr/local/ng
 
 # 访问域名测试
 
-![p1](20170419-01.jpg)
+![p1](01.jpg)
 
 Ok，没任何问题，证书有风险是没有CA机构认证(好贵的...)，至此可以满足在小程序里面发送请求的条件
