--- a/_posts/2015-01-01-主题预览.md
+++ b/_posts/2015-01-01-主题预览.md
@@ -294,21 +294,27 @@ __粗体__
 
 </div>
 ```
-# 嵌入外站内容
 
-<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=411259037&auto=0&height=66"></iframe>
+# 嵌入iframe
 
-<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=298 height=52 src="//music.163.com/outchain/player?type=2&id=411259037&auto=0&height=32"></iframe>
-
-<embed src="//music.163.com/style/swf/widget.swf?sid=411259037&type=2&auto=0&width=320&height=66" width="340" height="86"  allowNetworking="all"></embed>
-
+<html>
+  <body>
+    <div>
+        <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=64517&auto=0&height=66">
+        </iframe>
+      </div>
+   </body>
+</html>
 
 ```
-<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=411259037&auto=0&height=66"></iframe>
-
-<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=298 height=52 src="//music.163.com/outchain/player?type=2&id=411259037&auto=0&height=32"></iframe>
-
-<embed src="//music.163.com/style/swf/widget.swf?sid=411259037&type=2&auto=0&width=320&height=66" width="340" height="86"  allowNetworking="all"></embed>
+<html>
+  <body>
+    <div>
+        <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=64517&auto=0&height=66">
+        </iframe>
+      </div>
+   </body>
+</html>
 ```
 
 
