--- a/_posts/2015-01-01-主题预览.md
+++ b/_posts/2015-01-01-主题预览.md
@@ -297,5 +297,4 @@ __粗体__
 
 # 嵌入iframe
 
-<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&amp;id=64517&amp;auto=0&amp;height=66">
-</iframe>
+不支持！！！
