--- a/_posts/2015-01-01-主题预览.md
+++ b/_posts/2015-01-01-主题预览.md
@@ -298,3 +298,7 @@ __粗体__
 # 嵌入iframe
 
 不支持！！！
+
+<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=86367&auto=0&height=66"></iframe>
+
+<embed src="//music.163.com/style/swf/widget.swf?sid=86367&type=2&auto=0&width=320&height=66" width="340" height="86"  allowNetworking="all"></embed>
