--- a/_posts/2016-10-15-使用CSS3让网页动起来.md
+++ b/_posts/2016-10-15-使用CSS3让网页动起来.md
@@ -161,22 +161,27 @@ function aniIn() {
 
 结合Animate.css，实现首次进入/刷新，加完成时，某些局部元素的动画
 
+其实很简单，只要在元素上设置动画类就可以了，并不需要用js动态添加。相反用js动态添加可能会闪一下，再播放动画
+
+还可以监听动画结束
+
 ```html
+<ul>
+    <li class="animated bounceInLeft">L111111111111111111111111123333333333333321</li>
+    <li class="animated fadeInRight">L111111111111111111111111123333333333333321</li>
+    <li class="animated rotateInUpLeft">L111111111111111111111111123333333333333321</li>
+    <li class="animated rollIn">L111111111111111111111111123333333333333321</li>
+    <li class="animated lightSpeedIn">L111111111111111111111111123333333333333321</li>
+</ul>
+
+<!-- 并不需要 -->
 <script>
     var lis = document.getElementsByTagName("li");
-    var oldClassName = lis[0].className;
-    window.onload  = function () {
-        lis[0].className = oldClassName+" animated bounceInLeft";
-        lis[1].className = oldClassName+" animated fadeInRight";
-        lis[2].className = oldClassName+" animated rotateInUpLeft";
-        lis[3].className = oldClassName+" animated rollIn";
-        lis[4].className = oldClassName+" animated lightSpeedIn";
-        setTimeout(function () {
-            for(var i=0;i<lis.length;i++){
-                lis[i].className = oldClassName;
-            }
-        },1000);
-    };
+    for (var i=0;i<lis.length;i++){
+        lis[i].addEventListener("webkitAnimationEnd", function(){
+           this.className="";
+        });
+    }
 </script>
 ```
 
