--- a/_posts/2016-10-15-使用CSS3让网页动起来.md
+++ b/_posts/2016-10-15-使用CSS3让网页动起来.md
@@ -186,3 +186,42 @@ function aniIn() {
 ```
 
 ![p04](04.gif)
+
+# 点击冒泡动画
+
+```css
+@keyframes fadeOutUp {
+    from {
+        opacity: 1;
+    }
+
+    to {
+        opacity: 0;
+        transform: translate3d(0, -350%, 0);
+    }
+}
+```
+
+```javascript
+window.onclick = function (ev) {
+    var clickTips = ["富强", "民主", "文明", "和谐", "自由", "平等", "公正" ,"法治", "爱国", "敬业", "诚信", "友善"];
+    var span = document.createElement('span');
+    span.innerText = clickTips[parseInt(Math.random()*clickTips.length)];
+
+    span.setAttribute("style","z-index:999;position:absolute;left:"+ev.pageX+"px;top:"+(ev.pageY-20)+"px;animation-duration:1s;" +
+            "animation-fill-mode:both;animation-name:fadeOutUp;");
+    document.body.appendChild(span);
+    //WebKit
+    if(typeof document.body.style.WebkitAnimation!="undefined"){
+        span.addEventListener("webkitAnimationEnd",function () {
+            document.body.removeChild(span);
+        });
+    }else{
+        span.addEventListener("animationend",function () {
+            document.body.removeChild(span);
+        });
+    }
+}
+```
+
+![p05](05.gif)
