--- a/_posts/2017-06-25-校园网竟然支持ipv6.md
+++ b/_posts/2017-06-25-校园网竟然支持ipv6.md
@@ -1,7 +1,7 @@
 ---
 layout: mypost
 title: 校园网竟然支持ipv6
-categories: [java]
+categories: [小技巧]
 ---
 
 昨天宽带突然断掉了，弹出了Google Play中的一个软件的下载地址，竟然可以直接访问！！！赶紧打开Google竟然也可以访问
