--- a/_posts/2017-06-25-校园网竟然支持ipv6.md
+++ b/_posts/2017-06-25-校园网竟然支持ipv6.md
@@ -68,6 +68,9 @@ C:\windows\system32>ping www.google.com
 
 # google ipv6
 2404:6800:4008:800::2004 www.google.com
+
+# 这个是啥网站
+2400:cb00:2048:1::6819:1f70 t66y.com
 ```
 
 配置好之后，你会发现在连接到宽带的情况下可以访问被墙的Google了。所以只要把一些常用的ipv6网站配置到你的hosts文件中即可，不过比较麻烦的是配置文件不支持通配符的格式
