--- a/_posts/2016-03-01-腾讯云主机初始化.md
+++ b/_posts/2016-03-01-腾讯云主机初始化.md
@@ -109,11 +109,75 @@ yum groupinstall -y "Development Tools"
 yum install cmake bison-devel ncurses-devel autoconf automake zlib* fiex* libxml* libmcrypt* libtool-ltdl-devel*
 ```
 
-## 创建备份
+## 开启SSH服务
 
-在主机管理面板里创建硬盘快照（仅支持云硬盘），创建iso镜像，方便重装和恢复
++ 查看SSH是否安装
 
-至此初始化完成，如果要安装图形界面请往后看
+	```
+	rpm -qa | grep ssh
+	若没安装SSH则可输入：yum install openssh-server
+	```
+
++ 启动SSH服务
+
+	在Linux中,系统的服务放在了 `/etc/rc.d/init.d/`目录下面
+
+	如果我们直接来到`/etc/rc.d/init.d/`目录下面,我们敲入了服务名sshd回车
+
+	结果是:`sshd re-exec requires execution with an absolute path`
+
+	这句是说它是需要一个路径来指定的,于是我们指定为当前目录:`./sshd`
+
+	正常输出`Usage: ./sshd {start|stop|restart|reload|force-reload|condrestart|try-restart|status}`
+
+	我们在手动管理这些服务的时候,是需要加上路径的,如在当前目录下面,就加上./表示是当前目录
+
+	我们在一些例如计划任务等的操作中要用命令的绝对路径
+
+	意思是害怕有人恶意把我们的命令替换掉,这样的话就会先从我们当前路径查找,万一有一个恶性命令,那么的话就会出现问题
+
+	另外一种方法是使用init.d目录中的服务的一个命令service
+
+	```
+	重启SSH服务：service sshd restart
+	开启SSH服务：service sshd start
+	停止SSH服务：service sshd stop
+	注意直接采用sshd restart会出错
+	重启后可输入：netstat -antp | grep sshd 查看是否启动22端口
+	```
+	
++ 设置SSH服务为开机启动
+
+	```
+	输入命令：chkconfig sshd on 即可
+	若是chkconfig sshd off则禁止SSH开机启动
+	```
+	
++ 使用SSH连接主机
+
+	```
+	ssh 127.0.0.1 -p 22
+	报错信息：bash: ssh: command not found
+	原因是只安装了ssh服务却没有安装客户端
+	安装：yum install openssh-clients
+	```
+
++ 配置SSH
+
+	```
+	vi /etc/ssh/ssh_config 
+	vi /etc/ssh/sshd_config
+	```
+
++ 内网ssh连接速度很慢的解决方案
+
+	```
+	# vi /etc/ssh/sshd_conf
+	修改UseDNS no
+	修改GSSAPIAuthentication no
+	保存退出
+	service sshd restart后再ssh相互连接发现很快
+	```
 
 ## 安装桌面环境/可选
 
@@ -187,4 +251,8 @@ vncserver -list  //查看运行的桌面
 至此服务端部署完毕
 
 你可以通过UltraVNC Viewer、TigerVNC Viewer或者RealVNC Viewer访问远程桌面了
+
+## 创建备份
+
+在主机管理面板里创建硬盘快照（仅支持云硬盘），创建iso镜像，方便重装和恢复
 	
