--- a/_posts/2016-05-28-正则表达式.md
+++ b/_posts/2016-05-28-正则表达式.md
@@ -30,13 +30,14 @@ categories: [java,javascript]
 
 | 字符           | 描述  |
 |:-------------:| :-----|
-|*|匹配前面的子表达式零次或多次，等价于{0,}|
-|+|	匹配前面的子表达式一次或多次，等价于 {1,}|
+|`*`|匹配前面的子表达式零次或多次，等价于{0,}|
+|`+`|匹配前面的子表达式一次或多次，等价于 {1,}|
 |?|	匹配前面的子表达式零次或一次，等价于 {0,1}|
-|{n}|n 是一个非负整数。匹配确定的 n 次|
-|{n,}|n 是一个非负整数。至少匹配n 次|
-|{n,m}|	m 和 n 均为非负整数，其中n <= m。最少匹配 n 次且最多匹配 m 次,请注意在逗号和两个数之间不能有空格|
+|{n}|n是一个非负整数。匹配确定的n次|
+|{n,}|n是一个非负整数。至少匹配n次|
+|{n,m}|m,n为非负整数n <= m,最n-m次,在逗号和两个数之间不能有空格|
 |()|把括号内的作为一个整体，比如(ab){2},匹配abab|
+
 ## 定位符
 
 定位符用来描述字符串或单词的边界
