--- a/_posts/2017-08-04-用maven构建项目.md
+++ b/_posts/2017-08-04-用maven构建项目.md
@@ -102,6 +102,8 @@ pom.xml
 
 在Maven中存在三套生命周期，同时每一套生命周期相互独立互不影响
 
+注意每个生命周期里面又有好多步骤，但是可以总结为下面几个主要步骤
+
 CleanLifeCyle：清理生命周期,命令有clean
 
 defaultLifeCyle：默认生命周期,命令有compile，test，package，install，deploy
@@ -196,6 +198,14 @@ siteLifeCyle：站点生命周期,命令有site
 ```
 
 ![04](04.jpg)
+
+## 小技巧
+
+`mvn archetype:generate `插件可以使用不同的模版快速生成一个maven项目
+
+`mvn help:effective-pom` 显示项目完整的依赖
+
+`mvn cobertura:cobertura` 生成代码测试的覆盖率
 
 # 在eclipse使用maven
 
