--- a/_posts/2017-08-04-用maven构建项目.md
+++ b/_posts/2017-08-04-用maven构建项目.md
@@ -74,25 +74,25 @@ pom.xml
 
 ## 常用命令
 
-+ maven clean
++ mvn clean
 
 	将项目根目录下target目录清理掉
 
-+ maven compile
++ mvn compile
 
 	将项目中的java文件编译为class文件
 
-+ maven test
++ mvn test
 
 	单元测试，测试类名有要求XxxxTest.java
 
 	项目根目录下src/test/java目录下的单元测试类都会执行
 
-+ maven package
++ mvn package
 
 	项目打包，生成的包在target的根目录。web项目会打成war包，java项目会打成jar包
 
-+ maven install:安装
++ mvn install:安装
 
 	将项目打包并安装到本地仓库，方便在其他项目上用。好处是如果项目有变动，只需要再次安装即可，其他的项目都不需要变动依赖
 
@@ -206,6 +206,41 @@ siteLifeCyle：站点生命周期,命令有site
 `mvn help:effective-pom` 显示项目完整的依赖
 
 `mvn cobertura:cobertura` 生成代码测试的覆盖率
+
+为不同的环境配置不同的数据库连接信息
+
+```xml
+<profiles>
+	<profile>
+		<id>dev</id>
+		<activation>
+			<!-- 代表当前为dev环境 -->
+			<activeByDefault>true</activeByDefault>
+		</activation>
+		<properties>
+			<url>jdbc:mysql://127.0.0.1:3306/dev?characterEncoding=utf-8</url>
+		</properties>
+	</profile>
+	<profile>
+		<id>run</id>
+		<properties>
+			<url>jdbc:mysql://127.0.0.1:3306/book?characterEncoding=utf-8</url>
+		</properties>
+	</profile>
+</profiles>
+
+<!-- 添加要过滤的目录 -->
+<build>
+	<resources>
+		<resource>
+			<directory>${project.basedir}/src/main/resources</directory>
+			<filtering>true</filtering>
+		</resource>
+	</resources>
+</build>
+```
+
+在数据库的配置文件一行`url=${url}`,在项目运行的时候会根据pom中指定的环境替换`${url}`,只需要改变activeByDefault的位置即可
 
 # 在eclipse使用maven
 
