--- a/_posts/2017-03-23-struts2学习03-页面配置-获取数据.md
+++ b/_posts/2017-03-23-struts2学习03-页面配置-获取数据.md
@@ -1,6 +1,6 @@
 ---
 layout: mypost
-title: Struts2学习笔记03 页面配置 获取数据
+title: Struts2学习-03 页面配置 获取数据
 categories: [java]
 ---
 # 配置结果页面
@@ -244,4 +244,3 @@ user.username的username要在User里面有同名属性且提供get/set
     <input type="text" name="map['a'].username">
     <input type="number" name="map['a'].age">
     ```
-
