修改文章，添加注解配置步骤

--- a/_posts/2017-06-06-ssh框架搭建.md
+++ b/_posts/2017-06-06-ssh框架搭建.md
@@ -1,6 +1,6 @@
 ---
 layout: mypost
-title: spring整合hibernate和struts2
+title: SSH框架搭建
 categories: [java]
 ---
 
@@ -380,4 +380,60 @@ HTTP Status 500 - Could not open Hibernate Session for transaction; nested excep
 		</list>
 	</property>
 </bean
+```
+
+# 注解方式搭建
+
+引入struts2-convention依赖，让struts配置文件中取消对Action的配置
+
+Spring 自动扫包
+
+```
+<context:component-scan base-package="dao.daoImpl" />
+```
+
+daoImpl添加注解标签
+
+```
+import org.springframework.context.annotation.Scope;
+import org.springframework.stereotype.Component;
+import dao.UserDao;
+
+@Component(value="UserDaoImpl")
+@Scope(value="singleton")
+public class UserDaoImpl implements UserDao{
+	@Override
+	public void sayHello() {
+		System.out.println("Hello");
+	}
+}
+```
+
+在Action里装配dao
+
+```
+import javax.annotation.Resource;
+import org.apache.struts2.convention.annotation.Action;
+import org.apache.struts2.convention.annotation.Result;
+import org.apache.struts2.convention.annotation.Results;
+import com.opensymphony.xwork2.ActionSupport;
+import dao.UserDao;
+
+@Results({
+	@Result(name="ok",location="/test.jsp"),  
+	@Result(name="failure",location="/failure.jsp")})
+@Action(value="test")
+public class UserAction extends ActionSupport{
+	
+	private static final long serialVersionUID = 1L;
+	
+	@Resource(name="UserDaoImpl")
+	UserDao userDao;
+	
+	@Override
+	public String execute() throws Exception {
+		userDao.sayHello();
+		return "ok";
+	}
+}
 ```
