重新组织文章

--- a/_posts/2017-02-14-dao开发模式.md
+++ b/_posts/2017-02-14-dao开发模式.md
@@ -1,7 +1,7 @@
 ---
 layout: mypost
-title: DAO设计模式
-categories: [java,设计模式]
+title: DAO开发模式
+categories: [java]
 ---
 # 概念
 
@@ -302,4 +302,3 @@ public class UserDaoTest {
 
 }
 ```
-
