--- a/_posts/2017-08-15-原生js插件封装.md
+++ b/_posts/2017-08-15-原生js插件封装.md
@@ -135,3 +135,80 @@ this.pluginName = api;
 如果需要手动的对element添加不同的配置的推荐使用对象的方式创建，new对象是传入不同的配置，再把对象应用于不同的element
 
 总之闭包函数写的插件体现在公用，通过对象写的插件体现在私用，比如分页插件，一个页面可能有多个分页插件，采用不同的配置，不同的监听效果，，用该使用多个对象才能对多个分页插件进行互不干扰的操作
+
+# DEMO
+
+下面是一个简单的jsonp插件代码
+
+```
+;(function () {
+
+    //主要函数
+    function main(options,callbackfunc){
+
+        //产生一个随机函数名
+        var callbackName = ('jsonp_' + Math.random()).replace(".", "");
+
+        //参数添加到url中
+        var newUrl = addUrlParm(options.url,options.parm);
+        if(!newUrl.endsWith('?')){
+            newUrl = newUrl+"&";
+        }
+        newUrl=newUrl+options.callbackName+"="+callbackName;
+        
+        //创建 script 标签并加入到页面中
+        var oHead = document.getElementsByTagName('head')[0];
+        var oS = document.createElement('script');
+        oHead.appendChild(oS);
+        
+        //创建jsonp回调函数
+        window[callbackName] = function (json) {
+            oHead.removeChild(oS);
+            clearTimeout(oS.timer);
+            window[callbackName] = null;
+            callbackfunc(json);
+        };
+
+        //超时处理
+         oS.timer = setTimeout(function () {
+            window[callbackName] = null;
+            oHead.removeChild(oS);
+            callbackfunc(null);
+        }, options.time);
+
+        //开始请求
+        oS.src = newUrl;
+    }
+
+    function addUrlParm(url,parm){
+        var arr = [];
+        for (var name in parm){
+            arr.push(name + '=' + parm[name]);
+        }
+        return url+"?"+arr.join('&');
+    }
+
+    var api = {
+        execute:function(opt,callbackfunc){
+            options = {
+                parm:{},
+                time:3000,
+                callbackName:'callback'
+            };
+            if (!opt.url&&!opt.callback) {
+                console.error("参数不合法....");
+                return;
+            }else{
+                options.url=opt.url;
+            }
+            options.parm=opt.parm||options.parm;
+            options.time=opt.time||options.time;
+            options.callbackName=opt.callbackName||options.callbackName;
+            main(options,callbackfunc);
+        }
+    };
+
+    //曝露方法
+    this.jsonp = api;
+})();
+```
