--- a/_posts/2016-11-17-mybatis笔记整理.md
+++ b/_posts/2016-11-17-mybatis笔记整理.md
@@ -1012,4 +1012,75 @@ MyBatis系统中默认定义了两级缓存：一级缓存和二级缓存。
 
 失效条件
 
-SqlSession不同，对于不同的SqlSession,执行同一条
+SqlSession不同，对于不同的SqlSession,执行同一条sql语句会有两次请求
+
+SqlSession相同，执行不同的查询条件
+
+SqlSession相同，两次相同sql查询之间有增删改操作
+
+SqlSession相同，手动清除以及缓存，sqlsession.clearCache()
+
+## 二级缓存
+
+全局的缓存，基于namespace级别的缓存，一个namespace对应一个二级缓存
+
+工作机制：
+
+1. 一个会话，查询一条语句，这个数据就会被放在当前会话的以及缓存中
+
+2. 如果会话关闭，一级缓存的数据将会保存到二级缓存中，新的回话查询信息就可以参考二级缓存
+
+3. 不同的namespace查出来的数据会放在自己对应的缓存中（map）
+
+使用步骤
+
+1. 配置开启
+
+    ```
+    <settings>
+        <setting name="cacheEnabled" value="true"/>
+    </settings>
+    ```
+
+2. 在mapper中添加一个cache标签
+
+    ```
+    <cache eviction="缓存回收策略" blocking="" flushInterval="缓存刷新时间间隔" readOnly="是否只读" size="缓存多少个元素" type="指定自定义缓存的全类名，实现Cache接口"></cache>
+
+    一般使用
+    <cache></cache>即可
+    ```
+
+3. POJO实现序列化Serializable接口
+
+## 细节
+
+**select标签里的useCache仅对二级缓存生效，以及缓存是一致都使用的**
+
+**增删改标签的flushCache默认为false**
+
+**增删改标签的flushCache默认为true，一级缓存和二级缓存都会会被清空**
+
+**sqlsession.clearCache()只是清空一级缓存**
+
+**3.3版本之后的localCacheScope**
+
+## 与第三方cache插件整合
+
+去[https://github.com/mybatis](https://github.com/mybatis)查看官方的缓存整合项目和下载jar文件
+
+比如使用ehcache，需要整合包mybatis-ehcache
+
+jar包准备好之后,创建ehcache.xml文件
+
+```
+<mapper namespace="">
+    <cache type="org.mybatis.caches.ehcache.EhcacheCache">
+        <property name="" value=""/>
+        ...
+    </cache>
+
+    ..
+
+</mapper>
+```
