--- a/_posts/2017-08-04-用maven构建项目.md
+++ b/_posts/2017-08-04-用maven构建项目.md
@@ -322,23 +322,25 @@ java项目直接运行，对于web项目有下面两种方式运行
 
 1. 直接运行tomcat:run
 
-	maven内置了tomcat,可以直接运行，如果需要对运行做一些配置可以用下面的方法
+	maven内置了tomcat,可以直接运行
 
 	![13](13.png)
 
+	如果需要使用较新版本的tomcat，比如使用注解
+	
+	可以通过插件的方式安装tomcat7，运行命令也就变成了tomcat7:run,配置如下
+
 	```
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>tomcat-maven-plugin</artifactId>
-				<version>1.1</version>
-				<configuration>
-					<port>7070</port>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+	<plugin>
+		<groupId>org.apache.tomcat.maven</groupId>
+		<artifactId>tomcat7-maven-plugin</artifactId>
+		<version>2.1</version>
+		<configuration>
+			<path>/</path>
+			<contextReloadable>true</contextReloadable>
+			<uriEncoding>UTF-8</uriEncoding>
+		</configuration>
+	</plugin>
 	```
 
 2. 使用eclipse的配置好的tomcat
