--- a/_posts/2016-08-20-css3-变换-渐变-动画.md
+++ b/_posts/2016-08-20-css3-变换-渐变-动画.md
@@ -303,6 +303,7 @@ E{
     animation-timing-function: linear;
     animation-iteration-count: infinite;
     animation-direction: alternate;
+    animation-fill-mode : both;
 }
 @keyframes moveX {
     0%{
@@ -354,6 +355,19 @@ E{
 + 状态 animation-play-state
 
     控制动画的状态，取值running，paused
+
++ animation-fill-mode
+
+    决定动画播放前后的状态
+
+    none 不改变默认行为，从元素原始样式开始-0%样式-100%样式-原始样式
+
+    backwards：0%样式-0%样式-100%样式-原始样式
+
+    forwards：原始样式开始-0%样式-100%样式-100%样式
+
+    both：0%样式-0%样式-100%样式-100%样式
+
 
 ## 简写及多重动画
 
