--- a/_posts/2016-08-20-css3-变换-渐变-动画.md
+++ b/_posts/2016-08-20-css3-变换-渐变-动画.md
@@ -358,15 +358,15 @@ E{
 
 + animation-fill-mode
 
-    决定动画播放前后的状态
+    决定动画播放前后的状态,假设动画时间为2s
 
-    none 不改变默认行为，从元素原始样式开始-0%样式-100%样式-原始样式
+    none 不改变默认行为，css样式(-1s)-0%样式(0s)-100%样式(1s)-css样式(2s)
 
-    backwards：0%样式-0%样式-100%样式-原始样式
+    backwards：0%样式(-1s)-0%样式(0s)-100%样式(1s)-css样式(2s)
 
-    forwards：原始样式开始-0%样式-100%样式-100%样式
+    forwards：css样式(-1s)-0%样式(0s)-100%样式(1s)-100%样式(2s)
 
-    both：0%样式-0%样式-100%样式-100%样式
+    both：0%样式(-1s)-0%样式(0s)-100%样式(1s)-100%样式(2s)
 
 
 ## 简写及多重动画
