--- a/_posts/2017-08-09-正确引入layui模块.md
+++ b/_posts/2017-08-09-正确引入layui模块.md
@@ -31,18 +31,13 @@ categories: [javascript]
 
 # 通过layui.use加载模块
 
-通过这种方式引入模块最大的好处是，在网页加载的时候并不加载模块，能够提高网页的记载速度
-
-在第一次使用的时候会通过网络加载进来
+通过这种方式引入模块最大的好处是，在需要的时候才被加载需要模块，能够提高网页的记载速度
 
 ```javascript
-layui.use(['模块名'], function(){
+layui.use(['模块名','模块名'], function(){
     //加载完成的回调函数
     //推荐方法写在这里面，因为不知道什么时候加载完毕
 });
-//加载结束后会把模块名曝露在window上，可以直接使用模块名调用
-
-模块名.方法()//前提是加载完毕
 ```
 
 ```javascript
@@ -53,43 +48,25 @@ layui.use(['模块名'], function(){
 console.info(layui);//一个对象，里面什么都没有
 
 layui.use(['layer'], function(){
-    console.info(this);//等价于layui
-    console.info(layui);
-    console.info(layer);
     
+    //加载结束后会把模块名曝露在layui上，可以直接使用layui.xx调用
+    var layer = layui.layer;
+    console.info(this);//等价于layui
+   
 });
-
-console.info(layui);//模块加载完成后里面会有layer
-console.info(layer);//模块加载完成后在外部可以直接使用layer弹窗组件
 </script> 
-```
-
-有趣的是加载任意模块后,layui的格式如下，layui对象里面多了一个简易的jquery。但是这个jquery并不会对外曝露，可以通过layui调用。如果自己需要可以手动把它曝露在window上
-
-```javascript
-t {
-    v: "1.0.9_rls", 
-    layer: Object,
-    jquery : (e,t)
-    layer : Object,
-    __proto__ : Object
-}
-```
-
-```javascript
-layui.use(['layer', 'layer'], function(){
-    var jq = this.jquery;
-    console.info(jq("#test").html());   
-});
 ```
 
 # 自定义模块引入
 
+定义
+
 ```javascript
 //layui模块的定义
 layui.define([mods], function(exports){
-    //mods，会被绑定到layui对象，可以理解为你的模块依赖这些模块，先加载它们
+    //mods，你的模块依赖的模块，先加载它们
     //自定义的api
+    var api={};
     exports('mod', api);//把mod绑定到layui对象上，注意mod的名字必须喝use的时候一样
 });  
 ```
@@ -104,20 +81,15 @@ layui.define([mods], function(exports){
 layui.config({
     base: 'static/modules/' //你的模块目录
 }).use('mymod'); //加载入口
-```
 
-浏览器解析到这一行会加载你的static/modules/mymod.js文件，在你的js文件里面引入需要的模块即可
+//或者先声明模块目录
+layui.config({
+    base: 'static/modules/' //你的模块目录
+});
 
-mymod.js
-
-```javascript
-layui.define([], function(exports){
-    var myobj = {
-        say:function(){
-            console.info("Hello World");
-        }
-    }
-    exports('mymod', myobj);
+//然后再使用，先根据名字判断是否是layui内置的模块，然后引入声明的模块目录下的mymod.js文件
+layui.use(['mymod'], function(){
+    //...
 });
 ```
 
@@ -135,21 +107,34 @@ layui.mymod.say()
 
 推荐将自己的js方法以layui模块的方式书写，这样就可以通过user的方式来在需要的时候加载，加快页面的载入速度
 
-所以：
+# 最佳实践
 
-官方推荐建立一个自己的模块作为入口引入layui自带的模块，步骤如下
+页面
+
+```
+<head>
+    <link rel="stylesheet" href="/layui/css/layui.css">
+    <link rel="stylesheet" href="app.css">
+</head>
+<body>
+    ...
+    <script type="text/javascript" src="layui/layui.js"></script>
+    <script type="text/javascript" src="app.js"></script>
+</body>
+</html>
+```
+
+app.js文件
 
 ```javascript
-//主界面引入indx模块
 layui.config({
-    base: 'static/modules/' //你的模块目录
-}).use('index'); //加载入口
+    base: 'modules/'
+});
 
-//在static/modules/下建立index.js文件
-
-layui.define(['layer','form','layedit'], function(exports){
-    //你的模块依赖['layer','form','layedit']，系统会自动绑定他们到layui
-    exports('index', {});//导出自己的空模块
+layui.use(['layer', 'form', 'jquery','mymodel'], function() {
+    var model = layui.mymodel;
+    var $ = layui.jquery;
+    
 });
 ```
 
