--- a/_posts/2016-11-22-sql常用语句.md
+++ b/_posts/2016-11-22-sql常用语句.md
@@ -148,9 +148,18 @@ categories: [sql]
 
     把结果作为一个表，一定要为结果设置别名
 
-```
-SELECT * FROM(SELECT * FROM `user` WHERE `user`.user_id) AS u
-```
+    ```
+    SELECT * FROM(SELECT * FROM `user` WHERE `user`.user_id) AS u
+    ```
+
++ 多表连接子查询做计算
+
+    ```
+    select spacesize-used from (select * from xc_tym_user u
+    join xc_tym_sizetype s
+    on u.sizetype_id=s.id
+    where u.id=4) a,(select count(*) used from xc_tym_sizetype) b
+    ```
 
 + GROUP BY .. HAVING 
 
