--- a/_posts/2017-03-23-struts2学习03-页面配置-获取数据.md
+++ b/_posts/2017-03-23-struts2学习03-页面配置-获取数据.md
@@ -114,12 +114,15 @@ categories: [java]
 
 通过setAttribute方法来操作域对象
 
-# 使用sstruts封装的方式获取数据
+# 使用struts封装的方式获取数据
 
 ## 属性封装
 
-直接把表单提交属性封装到Actiond的属性里面，但是不能够直接封装到实体类中，因此右
-提供了模型驱动封装
+直接把表单提交属性封装到Actiond的属性里面
+
+由于直接封装到实体类中比较麻烦，先生成user的get/set方法，同时提交的表单的name要为user.name这种格式
+
+因此又提供了模型驱动封装
 
 注意:模型封装和属性驱动封装不能够同时使用
 
