--- a/_posts/2016-04-20-jQuery学习笔记.md
+++ b/_posts/2016-04-20-jQuery学习笔记.md
@@ -194,10 +194,18 @@ $().each(function(index,domObject){
 
 ## 获取修改属性
 
+对属性的操作主要用到attr和prop(后来引入的)
+
+对于HTML元素本身就带有的固有属性，在处理时，使用prop方法，比如说a标签的属性有href、target和class，这些属性就是元素本身就带有的属性，也是W3C标准里就包含有这几个属性，或者说在IDE里能够智能提示出的属性，这些就叫做固有属性。处理这些属性时，建议使用prop方法。
+
+对于HTML元素我们自己自定义的DOM属性，在处理时，使用attr方法。
+
+**对于某些属性的结果可能会有区别**,比如获得a标签的href，prop获得的是绝对路径，attr获得的是在代码中写的路径
+
 自定义的属性的W3C规定的属性都可以获取,部分属性无法修改获取，比如无法获得表单的value，无法修改表单的type
 
 ```
-prop()
+prop(name,value)//同下
 
 attr(name) 获得属性
 attr(name,value)
@@ -207,7 +215,9 @@ attr(name,function(){
     return value;
 })
 
-removeAttr(name)
+removeAttr(name)//强制移除
+
+removeProp(name)//值设置为undefined
 ```
 
 ## 表单value操作
