--- a/_posts/2017-09-20-git日常使用.md
+++ b/_posts/2017-09-20-git日常使用.md
@@ -67,6 +67,8 @@ categories: [小技巧]
 
     从远程仓库克隆一个项目
 
+	一次 Git 克隆会建立你自己的本地分支 master 和远程分支 origin/master，并且将它们都指向 origin 上的 master 分支。
+
 + `git remote add origin <url>` 
 
     把本地项目与远程项目关联
