--- a/_posts/2017-11-12-ReqProxy.md
+++ b/_posts/2017-11-12-ReqProxy.md
@@ -113,7 +113,7 @@ public class ProxyServlet extends HttpServlet {
             if (o.isRespText()) {
                 String result = bos.toString(o.getCharset());
                 if (o.isJsonp()) {
-                    result = o.getCallback() + "{" + result + "};";
+                    result = o.getCallback() + "(" + result + ");";
                 }
                 resp.setContentType(o.getRespContentType());
                 print = resp.getWriter();
