--- a/_posts/2017-11-21-JS的事件委托.md
+++ b/_posts/2017-11-21-JS的事件委托.md
@@ -10,7 +10,7 @@ categories: [javascript]
 $(selector).on(event,childSelector,data,function)
 ```
 
-后来才知道这个叫做事件委托-_-|||
+后来才知道这个叫做事件委托-_-
 
 最近再写播放器的时候也遇到了使用的场景,就是播放器的播放列表的点击事件，由于是使用原生JS写的,所以查阅了下关于JS时间委托的内容
 
